--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,121 @@
-.App {
-  text-align: center;
+html,
+body,
+#root {
+	font: 0.9rem sans-serif;
+	background: #0a1f44;
+	color: #1e2432;
+	/* height: 100%; */
+	margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-container {
+	/* background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418)),
+		url('https://oir.mobi/uploads/posts/2021-06/1623278090_18-oir_mobi-p-ochen-krasivii-zakat-priroda-krasivo-foto-18.jpg');
+	background-size: cover;
+	background-position: center; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main-container {
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.search {
+	outline: none;
+	padding: 10px 7%;
+	border-radius: 20px;
+	border: none;
+	margin-bottom: 5%;
+	background: rgba(250, 250, 250, 0.85);
 }
 
-.App-link {
-  color: #61dafb;
+.city {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	margin: 10px;
+	padding: 15px 3%;
+	border-radius: 20px;
+	background: rgba(250, 250, 250, 0.85);
+	box-shadow: 10px 10px 5px 0px rgba(15, 15, 15, 0.404);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.city-stock {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	margin: 10px;
+	padding: 15px 3%;
+	border-radius: 20px;
+	background: rgba(250, 250, 250, 0.85);
+	box-shadow: 10px 10px 5px 0px rgba(15, 15, 15, 0.404);
+	border: red 3px solid;
+}
+
+p {
+	margin-top: 7px;
+	text-transform: uppercase;
+	letter-spacing: 0.05em;
+}
+
+.cities {
+	display: flex;
+	align-items: center;
+	flex-direction: row;
+	justify-content: space-evenly;
+}
+
+.city-temp {
+	font-size: 35px;
+	font-weight: bold;
+	margin-top: 5px;
+	color: #1e2432;
+	text-align: center;
+}
+
+.city sup {
+	font-size: 0.5em;
+}
+
+.city-name {
+	font-size: 25px;
+	font-weight: bold;
+}
+
+.city-name sup {
+	padding: 0.2em 0.6em;
+	margin-left: 0.3em;
+	border-radius: 30px;
+	color: #fff;
+	background: #ff8c00;
+}
+
+.city-icon {
+	width: 85px;
+	height: 85px;
+}
+
+.info {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.info p {
+	margin: 0;
+}
+
+@media only screen and (max-width: 600px) {
+	.search {
+		padding: 20px 15%;
+	}
+
+	.city {
+		padding: 40px 20%;
+	}
 }
